fixing card with html and css on mobile

--- a/public/css/style-mark.css
+++ b/public/css/style-mark.css
@@ -244,6 +244,18 @@ nav ul li {
     height: 220px;
   }
 
+  .card.2-techs .waves-effect{
+    padding: 5px 0;
+  }
+
+  }
+  .devicon-plain-2techs {
+    float: left;
+    max-width: 100px;
+
+    width: 75px;
+  }
+
 }
 
 /*
